fix scrollbar height and fix search with special characters

--- a/src/essential-select/essential-select.component.scss
+++ b/src/essential-select/essential-select.component.scss
@@ -39,12 +39,8 @@ $not-validate: #e30613;
 
 
 // scrollbar
-::-webkit-scrollbar {
-  width: 14px;
-  height: 18px;
-}
 ::-webkit-scrollbar-thumb {
-  height: 6px;
+  height: 25px;
   border: 4px solid rgba(0, 0, 0, 0);
   background-clip: padding-box;
   -webkit-border-radius: 7px;
@@ -59,6 +55,15 @@ $not-validate: #e30613;
 ::-webkit-scrollbar-corner {
   background-color: transparent;
 }
+
+::-webkit-scrollbar {
+  width: 16px;
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: transparent;
+}
+
 
 .form-control {
   cursor: pointer;
